--- a/aMuse/packages.config
+++ b/aMuse/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="taglib" version="2.1.0.0" targetFramework="net461" />
   <package id="VideoLAN.LibVLC.Windows" version="3.0.0-alpha3" targetFramework="net461" />
   <package id="Vlc.DotNet.Core" version="2.2.1" targetFramework="net461" />
   <package id="Vlc.DotNet.Core.Interops" version="2.2.1" targetFramework="net461" />
