--- a/aMuse.Core/packages.config
+++ b/aMuse.Core/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CsQuery" version="1.3.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="taglib" version="2.1.0.0" targetFramework="net461" />
   <package id="Vlc.DotNet.Core" version="2.2.1" targetFramework="net461" />
   <package id="Vlc.DotNet.Core.Interops" version="2.2.1" targetFramework="net461" />
   <package id="Vlc.DotNet.Forms" version="2.2.1" targetFramework="net461" />
