--- a/aMuse.UI/packages.config
+++ b/aMuse.UI/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CsQuery" version="1.3.4" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="taglib" version="2.1.0.0" targetFramework="net461" />
   <package id="VideoLAN.LibVLC.Windows" version="3.0.0-alpha3" targetFramework="net461" />
   <package id="Vlc.DotNet.Core" version="2.2.1" targetFramework="net461" />
