--- a/aMuse.UI/aMuse.UI.csproj
+++ b/aMuse.UI/aMuse.UI.csproj
@@ -154,8 +154,12 @@
     <Resource Include="Icons\Speaker_52px.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="testAlbumCover.jpg" />
-    <Content Include="track.mp3" />
+    <Resource Include="testAlbumCover.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Content Include="track.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\VideoLAN.LibVLC.Windows.3.0.0-alpha3\build\VideoLAN.LibVLC.Windows.targets" Condition="Exists('..\packages\VideoLAN.LibVLC.Windows.3.0.0-alpha3\build\VideoLAN.LibVLC.Windows.targets')" />
