--- a/aMuse.Core/aMuse.Core.csproj
+++ b/aMuse.Core/aMuse.Core.csproj
@@ -71,13 +71,17 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="APIData\GeniusData.cs" />
     <Compile Include="DTO\ArtistInfo.cs" />
     <Compile Include="DTO\Hit.cs" />
     <Compile Include="DTO\RequestStatus.cs" />
     <Compile Include="DTO\Response.cs" />
     <Compile Include="DTO\TrackInfo.cs" />
     <Compile Include="DTO\Data.cs" />
-    <Compile Include="Library\AudioFile.cs" />
+    <Compile Include="Interfaces\IAudio.cs" />
+    <Compile Include="Interfaces\IFileManagement.cs" />
+    <Compile Include="Interfaces\ITrackDataParsing.cs" />
+    <Compile Include="Library\AudioFileTrack.cs" />
     <Compile Include="Library\Library.cs" />
     <Compile Include="Library\Playlist.cs" />
     <Compile Include="Library\PlaylistLibrary.cs" />
