--- a/aMuse.Core/aMuse.Core.csproj
+++ b/aMuse.Core/aMuse.Core.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Model\Artist.cs" />
     <Compile Include="Model\Track.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\SystemState.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
