--- a/aMuse.UI/aMuse.UI.csproj
+++ b/aMuse.UI/aMuse.UI.csproj
@@ -175,7 +175,6 @@
     <Resource Include="Icons\Play_52px.png" />
     <Resource Include="Icons\Rewind_52px.png" />
     <Resource Include="Icons\Speaker_52px.png" />
-    <Resource Include="Icons\Lirics.png" />
     <Resource Include="Icons\Undo_52px.png" />
     <Resource Include="Icons\music-record-big.png" />
     <Resource Include="Icons\music-record-small.png" />
@@ -185,7 +184,9 @@
     <Resource Include="Icons\Cross_52px.png" />
     <Resource Include="Icons\Stop.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Icons\Lyrics.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\VideoLAN.LibVLC.Windows.3.0.0-alpha3\build\VideoLAN.LibVLC.Windows.targets" Condition="Exists('..\packages\VideoLAN.LibVLC.Windows.3.0.0-alpha3\build\VideoLAN.LibVLC.Windows.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
