--- a/aMuse.Core/aMuse.Core.csproj
+++ b/aMuse.Core/aMuse.Core.csproj
@@ -90,7 +90,7 @@
     <Compile Include="Model\Artist.cs" />
     <Compile Include="Model\Track.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\AudioDistionary.cs" />
+    <Compile Include="Utils\AudioDictionary.cs" />
     <Compile Include="Utils\SystemState.cs" />
   </ItemGroup>
   <ItemGroup>
