--- a/aMuse.Core/aMuse.Core.csproj
+++ b/aMuse.Core/aMuse.Core.csproj
@@ -72,7 +72,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="APIData\GeniusData.cs" />
+    <Compile Include="DTO\ArtistDesctiption.cs" />
     <Compile Include="DTO\ArtistInfo.cs" />
+    <Compile Include="DTO\DescriptionData.cs" />
     <Compile Include="DTO\Hit.cs" />
     <Compile Include="DTO\RequestStatus.cs" />
     <Compile Include="DTO\Response.cs" />
